# Market-Data-Feed-Handler

./: .gitignore  CMakeLists.txt  README.md
include/: analytics.h  benchmark.h  lockfree_queue.h  market_tick.h  mutex_queue.h  tick_generator.h
src/: benchmark.cpp  main.cpp  tick_generator.cpp
